--- a/index.html
+++ b/index.html
@@ -1,37 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./index.css" rel="stylesheet" />
-    <title>React</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+    <title>Learning React</title>
 </head>
 <body>
-     <!-- basic html -->
-     <!-- <div id="root">
-        <h1>
-            Hello World!
-        </h1>
-     </div> -->
-     <!-- using JS -->
-     <!-- <div id="root"> </div>
-     <script>
-        const heading = document.createElement("h1");
-        heading.innerHTML = "Hello World with JavaScript!";
-
-        const root = document.getElementById("root");
-        root.appendChild(heading);//add h1 details inside div using JS
-     </script> -->
-
-     <!-- Using React -->
-     <!-- <script src="./App.js">  </script> // ERROR: As sequence matters -->
-
-     <h2> VKB </h2>
-     <div id="root"> 
-        <h2> VKB </h2> <!-- The data inside div, id: "root", gets replaced by data from App.js, where root is rendered-->
-     </div>
-     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-     <script src="./App.js">  </script>
+     <div id="root"> </div>
+     <script type="module" src="./App.js">  </script>
 </body>
 </html>
