--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="/index.css">
         <title>Food Delivery App</title>
     </head>
     <body>
         <div id="root"></div>
-        <script type="module" src="/App.js"> </script>
+        <script type="module" src="./src/App.js"> </script>
     </body>
 </html>
